# rust-pinyin

./: .travis.yml  Cargo.toml  build.rs
benches/: bench.rs
src/: lib.rs
