[package]
name = "pinyin"
version = "0.6.0"
edition = "2018"
authors = ["mozillazg <mozillazg101@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mozillazg/rust-pinyin"
repository = "https://github.com/mozillazg/rust-pinyin"
description = "Convert Chinese to pinyin"
documentation = "https://docs.rs/pinyin/"
keywords = [ "pinyin", "hanzi", "Chinese" ]
exclude  = [ "pinyin-data/*", "src/bin/mk_dict.rs" ]
build = "build.rs"

[badges]
travis-ci = { repository = "mozillazg/rust-pinyin", branch = "master" }
appveyor = { repository = "mozillazg/rust-pinyin", branch = "master", service = "github" }
coveralls = { repository = "mozillazg/rust-pinyin", branch = "master" }

[dependencies]
phf = { version = "0.7", optional = true }

[features]
default = [ ]
nightly = [ ]
hashmap = [ "phf" ]

[build-dependencies]
phf_codegen = "0.7"
